Resolve issue with libusb C++ header file inclusion.

Approved by:	re (marius)
PR:		210509
MFC after:	1 week

Former-commit-id: e023ba6e2dcf08cb1cc8a3faccd84ac4f6cf70f8